[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Menu.gd" type="Script" id=1]

[node name="Menu" type="Node2D"]
script = ExtResource( 1 )

[node name="Level2" type="Button" parent="."]
margin_left = 114.0
margin_top = 124.0
margin_right = 183.0
margin_bottom = 154.0
text = "PLAY"

[node name="Button" type="Button" parent="."]
margin_left = 263.0
margin_top = 1.0
margin_right = 315.0
margin_bottom = 38.0
text = "CLOSE"

[connection signal="pressed" from="Level2" to="." method="_on_Level2_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
